# library

./: .env.example  .gitattributes  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: crud.py  database.py  main.py  models.py  schemas.py
app/routers/: authors.py  books.py  copies.py  loans.py  readers.py
docs/: API.md
migrations/: alembic.ini  env.py
migrations/versions/: 0001_authors.py  0002_books.py  0003_book_authors.py  0004_copies.py  0005_readers.py  0006_loans.py
scripts/: entrypoint.sh  init-db.sh  seed.py
tests/: conftest.py  test_authors.py  test_books.py  test_copies.py  test_loans.py  test_readers.py
